--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
-  "homepage": "https://tonworkspace.github.io/ton-staking-ui",
+  "homepage": "https://tonworkspace.github.io/ton-staking-ui/",
   "scripts": {
     "deploy": "gh-pages -d dist",
     "dev": "vite",
@@ -15,13 +15,27 @@
     "predeploy": "npm run build"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.48.1",
     "@telegram-apps/sdk-react": "^2.0.20",
     "@telegram-apps/telegram-ui": "^2.1.8",
-    "@tonconnect/ui-react": "^2.0.5",
+    "@ton/core": "^0.60.0",
+    "@tonconnect/ui-react": "^2.0.11",
+    "@types/cron": "^2.0.1",
+    "cron": "^3.5.0",
     "eruda": "^3.0.1",
+    "lucide-react": "^0.474.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0"
+    "react-hot-toast": "^2.5.1",
+    "react-icons": "^5.4.0",
+    "react-loading-skeleton": "^3.5.0",
+    "react-router-dom": "^6.23.0",
+    "telegraf": "^4.16.3",
+    "ton": "^13.9.0",
+    "ton-core": "^0.53.0",
+    "tonweb": "^0.0.66",
+    "uuid": "^11.0.5",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
@@ -40,6 +54,7 @@
     "typescript-eslint": "^7.8.0",
     "vite": "^5.2.11",
     "vite-plugin-mkcert": "^1.17.6",
+    "vite-plugin-node-polyfills": "^0.23.0",
     "vite-tsconfig-paths": "^4.3.2"
   }
 }
