--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://scorpionworldtoken.xyz",
-  "name": "Scorpion World",
-  "iconUrl": "https://scorpionworldtoken.xyz/static/media/Scorp.03dcab08b99d84414c4e.png"
+  "url": "https://ton.vote",
+  "name": "TON Vote",
+  "iconUrl": "https://ton.vote/logo.png"
 }
